# codex-self-evolution-plugin

./: .codex-plugin  .env.provider.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  brainstorm.md  codex-review.concise.md  docker-compose.yml  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: test.yml
docs/: 2026-04-19-implementation-gap-audit.md  2026-04-20-compiler-existing-assets-handoff.md  2026-04-21-ready-for-others-gap-analysis.md  2026-04-30-memory-skill-recall-runtime-audit.md  design_v2.md  getting-started.md  todo.md
docs/implementation-plans/: 2026-04-18-codex-self-evolution-plugin-implementation-plan.md  2026-04-30-phase2-plugin-hooks-and-generated-skills-plan.md
docs/launchd/: com.codex-self-evolution.preflight.plist
docs/plans/: 2026-04-30-phase2-plugin-hooks-generated-skills.md
docs/specs/: 2026-04-18-codex-self-evolution-plugin-design.md  2026-04-19-codex-self-evolution-plugin-design-phase2-runtime-abstractions.md
notes/: 2026-04-19-并发模型讨论记录.md
plugins/codex-self-evolution/: hooks.json
plugins/codex-self-evolution/.codex-plugin/: plugin.json
scripts/: docker-e2e.sh  install-codex-hook.sh  install-scheduler.sh  install.sh  provider-smoke-test.py  uninstall-codex-hook.sh  uninstall-scheduler.sh
src/codex_self_evolution/: cli.py  config.py  config_file.py  config_file_template.py  csep.py  diagnostics.py  env_loader.py  logging_setup.py  migrate.py  schemas.py  storage.py  writer.py
src/codex_self_evolution/compiler/: agent_io.py  backends.py  engine.py  memory.py  recall.py  skills.py
src/codex_self_evolution/hooks/: codex_bridge.py  session_start.py  stop_review.py
src/codex_self_evolution/managed_skills/: manifest.py  publish.py  validation.py
src/codex_self_evolution/recall/: policy.md  search.py  session_recall.md  workflow.py
src/codex_self_evolution/review/: prompt.md  providers.py  runner.py  snapshot.py  subprocess_provider.py
src/codex_self_evolution_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: conftest.py  test_agent_compile_io.py  test_agent_compiler_backend.py  test_agent_opencode_invoker.py  test_api_key_env.py  test_cli_config.py  test_codex_bridge.py  test_compile_context.py  test_compiler_memory.py  test_compiler_recall.py  test_compiler_skills.py  test_config_file.py  test_config_home.py  test_csep_cli.py  test_diagnostics.py  test_end_to_end.py  test_env_loader.py  test_install_script.py  test_lock_protection.py  test_logging_setup.py  test_managed_skill_publish.py  test_memory_action_stats.py  test_migrate_worktrees.py  test_plugin_bundle_hooks.py  test_recall_search.py  test_recent_activity.py  test_reviewer_retry.py  test_reviewer_runner.py  test_scan.py  test_scheduler_integration.py  test_schemas.py  test_script_fallback_merge.py  test_session_start.py  test_session_start_codex_hook.py  test_stop_review.py  test_storage_state_machine.py  test_subprocess_reviewer.py  test_worktree_bucket_key.py  test_writer.py
tests/fixtures/stop_review/: stop_payload.json
(+2 files in other folders)
