[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-self-evolution-plugin"
version = "0.1.0"
description = "Hermes-style self-evolution plugin for Codex."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codex-self-evolution = "codex_self_evolution.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
codex_self_evolution = ["review/prompt.md", "recall/policy.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
